<resources>
    <string name="app_name">Better TDSB Connects</string>

    <!-- generic strings -->
    <string name="none">None</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>

    <!-- Strings related to login -->
    <string name="prompt_student_id">Student ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="login_failed">"Login failed"</string>

    <!-- UI related strings -->
    <string name="logout">Logout</string>
    <string name="welcome_text">Hello, %s</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">%s</string>
    <string name="nav_header_subtitle">%s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_header">%s</string>
    <string name="home_next_class">Next Class:</string>
    <string name="home_next_class_course_code">%s</string>
    <string name="home_next_class_course_desc">%s</string>
    <string name="home_next_class_course_time">%s - %s</string>
    <string name="home_next_class_room">Room %s</string>
    <string name="menu_settings">Settings</string>
    <string name="home_time_table">Time Table</string>
    <string name="action_debug">Debug Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_timetable">Time Table</string>
    <string name="timetable_date">%s - %s</string>
</resources>